--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ai-pulse-–-executive-ai-brief-v2",
+  "homepage": "https://ravichandran-urmila.github.io/AIPulsenews",
   "private": true,
   "version": "0.0.0",
   "type": "module",
