--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,28 @@
-name: Build and Deploy to GH Pages
+name: Deploy to GitHub Pages
+
 on:
   push:
     branches: [ main ]
-  # This line ensures that after your Nightly Crawler pushes a new JSON, 
-  # the website is rebuilt and redeployed automatically.
+  # This triggers the deployment after your Nightly Crawler updates the news
   workflow_run:
     workflows: ["Nightly AI Brief Crawl"]
     types: [completed]
+  # Allows you to manually trigger a deploy from the Actions tab
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build-and-deploy:
+  deploy:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
-
-      - name: Deploy
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: build # Or 'dist' if you are using Vite
-          branch: gh-pages
+          folder: . # This tells the bot to deploy the current root folder
+          branch: gh-pages # The website will live on this branch
