--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,35 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy to GH Pages
 
 on:
   push:
     branches: [ main ]
-  # This triggers the deployment after your Nightly Crawler updates the news
   workflow_run:
     workflows: ["Nightly AI Brief Crawl"]
     types: [completed]
-  # Allows you to manually trigger a deploy from the Actions tab
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  deploy:
-    concurrency: ci-${{ github.ref }}
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
+      - name: Setup Node 🟢
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install and Build 🏗️
+        run: |
+          npm install
+          npm run build
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: . # This tells the bot to deploy the current root folder
-          branch: gh-pages # The website will live on this branch
+          folder: dist # Vite uses 'dist', Create React App uses 'build'
+          branch: gh-pages
