--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
